# Taxi-SQL-Challenge

./: README.md  docker-compose.yaml  pyproject.toml
src/: data_parser.py  db_creator.py  models.py  settings.py
