[tool.poetry]
name = "taxi-sql-challenge"
version = "0.1.0"
description = ""
authors = ["danila12315454 <danilaprig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.6.3"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
pyarrow = "^16.1.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
